Add budget assignment source
